feat(auth-service): add dependencies and setup basic structure with logging feat(gateway): implement middleware for security, CORS, and logging feat(gateway): add health check route and Swagger documentation chore(gateway): configure TypeScript and nodemon for development chore(gateway): setup Docker ignore files and example environment variables feat(logs-service): initialize service structure feat(notification-service): initialize service structure feat(users-service): initialize service structure

--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -1,13 +1,47 @@
 {
   "name": "gateway",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "tsx src/server.ts",
+    "nodemon": "nodemon",
+    "server": "nodemon --exec tsx src/server.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "ZeroDayZ7",
   "license": "ISC",
-  "packageManager": "pnpm@10.13.1"
+  "packageManager": "pnpm@10.13.1",
+  "dependencies": {
+    "connect-redis": "^9.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
+    "envalid": "^8.1.0",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
+    "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
+    "http-proxy-middleware": "^3.0.5",
+    "ioredis": "^5.6.1",
+    "morgan": "^1.10.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/express-session": "^1.18.2",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "24.0.13",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "tsx": "^4.20.3",
+    "typescript": "5.8.3"
+  }
 }
