--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -28,6 +28,7 @@
     "http-proxy-middleware": "^3.0.5",
     "ioredis": "^5.6.1",
     "morgan": "^1.10.1",
+    "prom-client": "^15.1.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
