feat: update dotenv import and clean up package.json; add .gitignore for tests

--- a/apps/gateway/tsconfig.json
+++ b/apps/gateway/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "target": "ES2020",                  // Nowoczesny JavaScript
     "module": "NodeNext",
-    "moduleResolution": "NodeNext",     // Poprawna obsługa rozszerzeń i ESM
+    "moduleResolution": "NodeNext",
+    // "types": ["node"],                   // Poprawna obsługa rozszerzeń i ESM
     "rootDir": "./src",                  // Źródła TypeScript
     "outDir": "./dist",                  // Kompilowane pliki JS
     "strict": true,                      // Wymuszaj poprawność typów
