--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -23,7 +23,6 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
-    "@types/node": "24.0.13",
-    "@types/winston": "^2.4.4"
+    "@types/node": "24.0.13"
   }
 }
