feat: update Dockerfiles and docker-compose files for auth and gateway services; add monitoring and pgadmin configurations

--- a/apps/gateway/Dockerfile
+++ b/apps/gateway/Dockerfile
@@ -1,9 +1,8 @@
-FROM node:24
+FROM node:24-alpine
 
 WORKDIR /app
 
-COPY ../../pnpm-lock.yaml ../../package.json ./
-COPY ./package.json ./services/auth/package.json ./
+COPY ./pnpm-lock.yaml ./package.json ./
 
 RUN npm install -g pnpm && pnpm install --filter ./services/auth...
 
