--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   reverse-proxy:
     build:
@@ -68,7 +66,7 @@ services:
     depends_on:
       - redis
       - auth-service
-      - postgres
+      - auth-db
     networks:
       - internal
     command: pnpm run nodemon
@@ -84,6 +82,7 @@ services:
       dockerfile: Dockerfile
     container_name: auth-service
     restart: unless-stopped
+    
     ports:
       - '5000:5000'
     volumes:
@@ -96,7 +95,7 @@ services:
     env_file:
       - ./services/auth-service/.env
     depends_on:
-      - postgres
+      - auth-db
       - redis
     networks:
       - internal
@@ -125,6 +124,7 @@ services:
     container_name: auth-db
     image: postgres:15-alpine
     restart: always
+    profiles: ["auth"]
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
@@ -188,10 +188,9 @@ services:
 networks:
   internal:
     driver: bridge
-  public:
-    driver: bridge
 # Wolumeny
 volumes:
   auth-db-data:
   pgadmindata:
   redis-data:
+  grafana-data:
