feat(gateway): update Dockerfile and package.json; enhance error handling and rate limiting
- Changed working directory in Dockerfile for better structure.
- Updated package.json to modify dev and server scripts for consistency.
- Enhanced error handling in app.ts to provide detailed error responses.
- Integrated express-rate-limit for login and registration routes.
- Added new services for logs, notifications, and users in pnpm-lock.yaml.
- Created README for logs-service to document its purpose and functionalities.

--- a/apps/gateway/Dockerfile
+++ b/apps/gateway/Dockerfile
@@ -1,11 +1,17 @@
 FROM node:24-alpine
 
-WORKDIR /app
+WORKDIR /usr/src/app
 
-COPY ./pnpm-lock.yaml ./package.json ./
+COPY ./project-root/pnpm-lock.yaml ./pnpm-lock.yaml
+COPY ./project-root/package.json ./package.json
+COPY ./project-root/pnpm-workspace.yaml ./pnpm-workspace.yaml
 
-RUN npm install -g pnpm && pnpm install --filter ./services/auth...
+RUN npm install -g pnpm
 
-COPY . .
+RUN pnpm install
 
-CMD ["pnpm", "dev"]
+COPY ./project-root/apps/gateway ./apps/gateway
+
+WORKDIR /usr/src/app/apps/gateway
+
+CMD ["pnpm", "run", "dev"]
