--- a/docker/docker-compose.auth-service.yml
+++ b/docker/docker-compose.auth-service.yml
@@ -25,11 +25,13 @@ services:
   auth-db:
     image: postgres:15-alpine
     container_name: auth-db
-    restart: always
+    restart: unless-stopped
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
       POSTGRES_DB: authdb
+    env_file:
+      - ../services/auth-service/.env
     ports:
       - "5432:5432"
     volumes:
