--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -15,15 +15,19 @@
   "license": "ISC",
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
+    "connect-redis": "^9.0.0",
     "dotenv": "^17.2.0",
     "envalid": "^8.1.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
+    "express-session": "^1.18.2",
+    "ioredis": "^5.6.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/express-session": "^1.18.2",
     "@types/node": "24.0.13"
   }
 }
