--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # lub inna gałąź, z której chcesz deployować
+      - main
 
 jobs:
   build-and-deploy:
@@ -20,9 +20,7 @@ jobs:
         run: pnpm install
 
       - name: Build Next.js static export
-        run: |
-          pnpm run build
-          pnpm run export  # generuje folder out/
+        run: pnpm run build  # generuje out/ jeśli masz output: 'export' w next.config.js
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
