--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
         run: npm install -g pnpm
 
       - name: Install dependencies
+        working-directory: apps/web
         run: pnpm install
 
       - name: Build Next.js static export
