--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    permissions: # <--- DODAJ TĘ SEKCJE
+      pages: write # Pozwala na deploy na GitHub Pages
+      id-token: write # Wymagane dla GitHub Pages
     steps:
       - uses: actions/checkout@v3
 
