--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -31,28 +31,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Detect package manager
-        id: detect-package-manager
-        run: |
-          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            echo "runner=yarn" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "manager=npm" >> $GITHUB_OUTPUT
-            echo "command=ci" >> $GITHUB_OUTPUT
-            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
-            exit 0
-          else
-            echo "Unable to determine package manager"
-            exit 1
-          fi
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
+          node-version: "22" # Upewnij się, że to jest wersja Node.js, której używasz
+          cache: 'pnpm' # Zmieniono na pnpm
+      
+      - name: Setup pnpm
+        run: npm install -g pnpm # Zainstaluj pnpm globalnie
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
@@ -61,24 +49,33 @@ jobs:
           #
           # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: next
+          # Base path będzie automatycznie dodany do next.config.js
+          # Przykład: next.config.js będzie zawierał: basePath: '/your-repo-name'
+          # Co jest kluczowe dla GitHub Pages, jeśli nie jest to repozytorium typu project.github.io
+
       - name: Restore cache
         uses: actions/cache@v4
         with:
           path: |
-            .next/cache
+            apps/web/.next/cache # <--- Dostosowana ścieżka do cache
           # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }} # <--- Dostosowano do pnpm
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
+             ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}- # <--- Dostosowano do pnpm
+
       - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+        working-directory: apps/web # <--- Kluczowe: pracuj w katalogu aplikacji
+        run: pnpm install # Używamy pnpm install bezpośrednio
+
       - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build
+        working-directory: apps/web # <--- Kluczowe: buduj w katalogu aplikacji
+        run: pnpm run build # Używamy pnpm run build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./out
+          path: ./apps/web/out # <--- Kluczowe: ścieżka do wygenerowanych plików statycznych
 
   # Deployment job
   deploy:
