--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -39,7 +39,10 @@ jobs:
           cache: 'pnpm' # Zmieniono na pnpm
       
       - name: Setup pnpm
-        run: npm install -g pnpm # Zainstaluj pnpm globalnie
+        uses: pnpm/action-setup@v3 # <--- ZMIENIONO AKCJĘ!
+        with:
+          version: 9 # Możesz określić konkretną wersję pnpm, np. 8 lub 9
+          run_install: false
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
