--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,10 @@
 {
   "semi": true,
   "singleQuote": true,
-  "printWidth": 80,
+  "printWidth": 120,
   "tabWidth": 2,
   "trailingComma": "all",
   "arrowParens": "always",
   "bracketSpacing": true,
-  "jsxSingleQuote": false,
-  "plugins": ["prettier-plugin-organize-attributes", "prettier-plugin-tailwindcss"]
+  "jsxSingleQuote": false
 }
