--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,10 +24,11 @@
     "next": "^15.4.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "@neo/ui": "workspace:*"
   },
   "devDependencies": {
-    "@types/node": "24.0.13",
+    "@types/node": "24.1.0",
     "@types/react": "19.1.8",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
