--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "pnpm --filter web run dev",
+    "update-all": "pnpm update --latest --recursive",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
