--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,7 +15,13 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "zod": "^4.0.10",
+    "lucide-react": "^0.525.0",
+    "react-hook-form": "^7.61.1",
+    "class-variance-authority": "^0.7.1",
+    "@hookform/resolvers": "^5.2.0",
+    "sonner": "^2.0.6"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -26,9 +32,7 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
-    "class-variance-authority": "^0.7.1",
-    "lucide-react": "^0.525.0"
+    "@radix-ui/react-switch": "^1.2.5"
   },
   "devDependencies": {
     "@types/react": "19.1.8",
