--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,14 +10,15 @@
     "dev": "tsup src/index.ts --dts --format esm,cjs --watch"
   },
   "peerDependencies": {
-    "clsx": "^2.1.1",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "lucide-react": "^0.525.0",
-    "class-variance-authority": "^0.7.1"
+    "react-hook-form": "7.61.1",
+    "@hookform/resolvers": "5.2.0"
+    
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -28,7 +29,9 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5"
+    "@radix-ui/react-switch": "^1.2.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1" 
   },
   "devDependencies": {
     "@types/react": "19.1.8",
