--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "turbo": "next dev --turbopack -H 0.0.0.0",
     "build": "next build",
-    "export": "next export",
+    "serve": "npx serve out",
     "start": "next start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
