--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,7 +31,8 @@
     "react-hook-form": "7.61.1",
     "sonner": "2.0.6",
     "tailwind-merge": "^3.3.1",
-    "zod": "4.0.10"
+    "zod": "4.0.10",
+    "next-intl": "^4.3.4"
   },
   "devDependencies": {
     "@types/node": "24.1.0",
