--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,17 +22,19 @@
     "@tailwindcss/postcss": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.6",
+    "framer-motion": "^12.23.12",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "next": "^15.4.4",
+    "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "7.61.1",
     "sonner": "2.0.6",
     "tailwind-merge": "^3.3.1",
-    "zod": "4.0.10",
-    "next-intl": "^4.3.4"
+    "zod": "4.0.10"
   },
   "devDependencies": {
     "@types/node": "24.1.0",
