--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -20,12 +20,15 @@
     ],
     "baseUrl": "./src",
     "paths": {
-      "@*": ["./*"],
+      "@/*": ["./*"],
+      "@@/*": ["../*"],
       "@components/*": ["./components/*"],
       "@context/*": ["./context/*"],
       "@config/*": ["./config/*"],
       "@providers/*": ["./providers/*"],
       "@lib/*": ["./lib/*"],
+      "@mocks/*": ["../mocks/*"],
+      "@services/*": ["./services/*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
