--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "pnpm --filter web run dev",
+    "dev": "pnpm --filter web run turbo",
     "update-all": "pnpm update --latest --recursive",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
