--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,8 @@
     "**/node_modules": true,
     "**/.next": true,
     "**/logs": true,
-    "pnpm-lock.yaml": true,
-    "package.json": true
+    "**/pnpm-lock.yaml": true,
+    "**/package.json": true
   },
 
   // Wykluczenie z eksploratora plików
@@ -15,8 +15,9 @@
     "**/node_modules": true,
     "**/.next": true,
     "**/logs": true,
-    "pnpm-lock.yaml": true
-    // "LICENSE": true
+    "**/pnpm-lock.yaml": true,
+    "**/LICENSE": true,
+    "**/nginx": true
   },
 
   // Wyłączenie zawijania linii w edytorze
