fix(gateway): applied fixes and enabled Auth Service; improved web login flow with point-based logging

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
       "@neo/ui/*": ["packages/ui/src/*"]
     }
   },
-  "include": ["packages/*/src"]
+  "include": ["packages/*/src", "packages/common/tsconfig.json"]
 }
