--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,9 +19,11 @@
     "**/LICENSE": true,
     "**/nginx": true,
     "**/nodemon.json": true,
-    "**/README.md":true
+    "**/README.md": true
   },
 
   // Wyłączenie zawijania linii w edytorze
-  "editor.wordWrap": "wordWrapColumn"
+  "editor.wordWrap": "wordWrapColumn",
+  "editor.formatOnPaste": false,
+  "editor.formatOnSave": false
 }
