--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "pnpm --filter web run turbo",
+    "web": "pnpm --filter web run turbo",
+    "gate": "pnpm --filter gateway run nodemon",
+    "auth": "pnpm --filter auth-service run nodemon",
     "update-all": "pnpm update --latest --recursive",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
