--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -1,13 +1,14 @@
 {
   "name": "auth-service",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "tsx src/server.ts",
+    "dev": "tsx src/index.ts",
     "nodemon": "nodemon"
   },
   "keywords": [],
@@ -15,6 +16,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
+    "@neo/common": "workspace:*",
     "connect-redis": "^9.0.0",
     "dotenv": "^17.2.1",
     "envalid": "^8.1.0",
