fix: gateway routes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,7 @@
     "**/out": true,
     "**/node_modules": true,
     "**/.next": true,
-    "**/logs": true,
+    "**/logs": false,
     "**/pnpm-lock.yaml": true,
     "**/LICENSE": true,
     "**/nginx": true,
