--- a/services/auth-service/tsconfig.json
+++ b/services/auth-service/tsconfig.json
@@ -1,16 +1,13 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "ES2020",                  // Nowoczesny JavaScript
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",     // Poprawna obsługa rozszerzeń i ESM
-    "rootDir": "./src",                  // Źródła TypeScript
-    "outDir": "./dist",                  // Kompilowane pliki JS
-    "strict": true,                      // Wymuszaj poprawność typów
-    "esModuleInterop": true,             // Wspiera importy CommonJS
-    "allowSyntheticDefaultImports": true,// Dla importów bez `default`
-    "resolveJsonModule": true,           // Możliwość importowania JSON
-    "skipLibCheck": true                 // Pomija typy w `node_modules`
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
-  "include": ["src"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
