--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,22 +1,41 @@
 {
   "name": "@neo/common",
   "version": "1.0.0",
-  "main": "src/index.js",
-  "module": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "type": "module",
-   "scripts": {
-    "build": "tsup src/index.ts --dts --format esm,cjs",
-    "dev": "tsup src/index.ts --dts --format esm,cjs --watch"
+  "scripts": {
+    "build": "tsup",
+    "tsx": "tsc --emitDeclarationOnly && tsup src/index.ts --format esm,cjs",
+    "tsc": "tsc",
+    "tsup": "tsup src/index.ts --dts --dts-resolve --format esm,cjs",
+    "dev": "tsup src/index.ts --dts --dts-resolve --format esm,cjs --watch"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.js"
+    }
   },
   "peerDependencies": {
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.0",
     "express": "^5.1.0",
-    "typescript": "^5.8.3",
-    "tsup": "^8.5.0"
+    "tsup": "^8.5.0",
+    "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
+    "express-rate-limit": "^7.3.0",
+    "helmet": "^8.1.0"
   }
 }
