--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -4,6 +4,7 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "declaration": true,
+    "emitDeclarationOnly": false,
     "baseUrl": "./src",
     "paths": {
       "@/*": ["./src/*"]
