--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
+    "debug": "DEBUG=express:* tsx src/index.ts",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
     "nodemon": "nodemon",
