fix: everything is broken and I don't know why
chore: git please have mercy

wip: it worked yesterday

debug: the bug is back and it's personal

feat: added 2 hours of confusion

--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -6,6 +6,7 @@
     "declaration": true,
     "emitDeclarationOnly": false,
     "baseUrl": "./src",
+    // "typeRoots": ["./types", "./node_modules/types"],
     "paths": {
       "@/*": ["./src/*"]
     }
