--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
-    "@hookform/resolvers": "5.2.0",
+    "@hookform/resolvers": "5.2.1",
     "@neo/ui": "workspace:*",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.11",
@@ -25,25 +25,22 @@
     "dompurify": "^3.2.6",
     "framer-motion": "^12.23.12",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.525.0",
-    "next": "^15.4.4",
+    "lucide-react": "^0.537.0",
+    "next": "^15.4.6",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "7.61.1",
-    "sonner": "2.0.6",
-    "tailwind-merge": "^3.3.1",
-    "zod": "4.0.10"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-hook-form": "7.62.0",
+    "sonner": "2.0.7",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "@types/node": "24.1.0",
-    "@types/react": "19.1.8",
+    "@types/react": "19.1.9",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.11",
-    "tw-animate-css": "^1.3.6",
-    "typescript": "5.8.3"
+    "tw-animate-css": "^1.3.6"
   }
 }
