--- a/package.json
+++ b/package.json
@@ -7,11 +7,26 @@
     "web": "pnpm --filter web run turbo",
     "gate": "pnpm --filter gateway run nodemon",
     "auth": "pnpm --filter auth-service run nodemon",
+    "start-all": "sh scripts/start-all.sh",
     "update-all": "pnpm update --latest --recursive",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.13.1"
+  "packageManager": "pnpm@10.13.1",
+  "dependencies": {
+    "dotenv": "^17.2.1",
+    "envalid": "^8.1.0",
+    "express": "^5.1.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^4.0.15"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/node": "24.2.0",
+    "tsx": "^4.20.3",
+    "typescript": "5.9.2"
+  }
 }
