--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,15 +10,14 @@
     "dev": "tsup src/index.ts --dts --format esm,cjs --watch"
   },
   "peerDependencies": {
+    "@hookform/resolvers": "5.2.0",
+    "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
-    "lucide-react": "^0.525.0",
     "react-hook-form": "7.61.1",
-    "@hookform/resolvers": "5.2.0"
-    
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -31,13 +30,13 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1" 
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
-    "@types/react": "19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/react": "19.1.9",
+    "@types/react-dom": "^19.1.7",
     "next-themes": "^0.4.6",
     "tsup": "^8.5.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.2"
   }
 }
