feat(ui): build package with tsup config, add .npmrc for hoisting
- Added tsup config for `ui` package (build, dts)
- Added `.npmrc` in root to enable pnpm hoisting (`node-linker=hoisted`)
- Updated homepage: imported and tested modal from `ui` package (shadcn dialog)
- Cleaned up alias imports in `ui` package tsconfig

---

feat(ui): budowanie paczki z konfiguracją tsup, dodanie .npmrc do hoistingu

- Dodano konfigurację tsup dla paczki `ui` (build, dts)
- Dodano `.npmrc` w root dla włączenia hoistingu pnpm (`node-linker=hoisted`)
- Zmieniono homepage — zaimportowano i przetestowano modal z paczki `ui` (dialog shadcn)
- Uporządkowano aliasy importów w tsconfig paczki `ui`

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -2,11 +2,12 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"], // Potrzebne dla React/Next.js
-    "allowJs": true, // Dla plików JS w Next.js
     "noEmit": true, // Next.js nie emituje kodu, używa własnego kompilatora
     "incremental": true, // Szybsza kompilacja
     "isolatedModules": true, // Wymagane przez Next.js
-    "jsx": "preserve", // Zachowuje JSX dla Next.js
+    // "jsx": "react-jsx", // Zachowuje JSX dla Next.js
+    "jsx": "react-jsxdev",
+    "allowImportingTsExtensions": true,
     "baseUrl": "./src",
     "paths": {
       "@/*": ["./*"],
