--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "express": "^5.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
-    "zod": "^4.0.15"
+    "zod": "^4.0.15",
+
+    "@radix-ui/react-dialog": "^1.1.14"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
