--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-     "target": "ES2024", // Nowoczesny JavaScript, kompatybilny z Node.js i przeglądarkami
+    "target": "ES2024", // Nowoczesny JavaScript, kompatybilny z Node.js i przeglądarkami
     "module": "NodeNext", // ESM dla spójności z Express i Next.js
     "moduleResolution": "NodeNext", // Poprawna obsługa ESM
     "strict": true, // Wymuszenie ścisłego typowania
@@ -9,6 +9,7 @@
     "resolveJsonModule": true, // Importowanie JSON
     "skipLibCheck": true, // Pomija sprawdzanie typów w node_modules
     "forceConsistentCasingInFileNames": true, // Zapobiega problemom z wielkością liter
+    "allowJs": true,
     "baseUrl": ".", // Bazowy katalog dla paths
     "paths": {
       "@neo/*": ["./packages/*/src"],
