fix: update all package dependencies and clean up UI using custom shacn package
- Updated all package dependencies to their latest versions
- Fixed UI issues using the custom shacn package
- Added cleaning scripts

naprawa: zaktualizowano wszystkie zależności pakietów i poprawiono UI przy użyciu niestandardowego pakietu shacn

- Zaktualizowano wszystkie zależności pakietów do najnowszych wersji
- Naprawiono problemy z UI przy użyciu niestandardowego pakietu shacn
- Dodano skrypty czyszczące

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -6,7 +6,8 @@
     "incremental": true, // Szybsza kompilacja
     "isolatedModules": true, // Wymagane przez Next.js
     // "jsx": "react-jsx", // Zachowuje JSX dla Next.js
-    "jsx": "react-jsxdev",
+    "strict": true,
+    "jsx": "preserve",
     "allowImportingTsExtensions": true,
     "baseUrl": "./src",
     "paths": {
@@ -25,6 +26,5 @@
       }
     ]
   },
-  "include": ["src/**/*", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*", ".next/types/**/*.ts"]
 }
