--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -12,12 +12,11 @@
     "typecheck": "tsc --noEmit"
   },
   "keywords": [],
-  "author": "ZeroDayZ7",
+  "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
     "@neo/common": "workspace:*",
-    "express-rate-limit": "^8.0.1",
     "http-proxy-middleware": "^3.0.5",
     "prom-client": "^15.1.3",
     "swagger-jsdoc": "^6.2.8",
