--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
     "auth": "pnpm --filter auth-service run nodemon",
     "start-all": "sh scripts/start-all.sh",
     "update-all": "pnpm update --latest --recursive",
+    "pnpm:clear": "sh scripts/clear-pnpm.sh",
+    "pnpm:clearlogs": "sh scripts/clear-logs.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "ZeroDayZ7",
   "license": "ISC",
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "envalid": "^8.1.0",
     "express": "^5.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
-    "zod": "^4.0.15",
-
-    "@radix-ui/react-dialog": "^1.1.14"
+    "zod": "^4.0.15"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
