--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -20,23 +20,19 @@
       "default": "./dist/index.js"
     }
   },
-  "peerDependencies": {
-    "express": "^5.1.0"
-  },
   "devDependencies": {
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.2.0",
-    "express": "^5.1.0",
-    "tsup": "^8.5.0",
-    "typescript": "^5.9.2"
+    "tsup": "^8.5.0"
   },
   "dependencies": {
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
-    "uuid": "^11.1.0"
+    "rate-limiter-flexible": "^7.2.0",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
