--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,7 +12,6 @@
   "peerDependencies": {
     "@hookform/resolvers": "5.2.0",
     "lucide-react": "^0.525.0",
-    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "7.61.1",
@@ -21,21 +20,12 @@
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-hover-card": "^1.1.14",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-popover": "^1.1.14",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1"
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3"
   },
   "devDependencies": {
     "@types/react": "19.1.9",
     "@types/react-dom": "^19.1.7",
-    "next-themes": "^0.4.6",
-    "tsup": "^8.5.0",
-    "typescript": "^5.9.2"
+    "tsup": "^8.5.0"
   }
 }
