--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -8,10 +8,10 @@
     "allowImportingTsExtensions": true,
     "jsx": "react-jsx",
     "baseUrl": "./src",
-    // "paths": {
-    //   "@/components/*": ["./components/*"],
-    //   "@/lib/*": ["../lib/*"]
-    // }
+    "paths": {
+      "@/components/*": ["./components/*"],
+      "@/lib/*": ["../lib/*"]
+    }
   },
   "include": ["src/**/*"]
 }
