--- a/scripts/package.json
+++ b/scripts/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "ce": "check-email.cmd",
+    "ce": "check-email.sh",
     "cee": "powershell -ExecutionPolicy Bypass -File ./check-email.ps1"
   },
   "keywords": [],
