feat: integrate Redis and Express session into index.ts
- Initialized Redis client and session store
- Integrated express-session middleware using RedisStore
- Moved session configuration to sessionManager
- Ensured Redis is ready before starting the server

feat: integracja Redis i sesji Express w index.ts

- Zainicjalizowano klienta Redis i store sesji
- Dodano middleware express-session z użyciem RedisStore
- Przeniesiono konfigurację sesji do sessionManager
- Upewniono się, że Redis jest gotowy przed uruchomieniem serwera

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,5 +19,5 @@
     }
   },
   "include": ["packages/*/src/**/*", "apps/*/src/**/*", "types/**/*"],
-  "exclude": ["node_modules", "**/dist", "**/build"]
+  "exclude": ["node_modules", "**/dist", "**/build", "**/logs", "**/scripts"]
 }
