--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -17,12 +17,16 @@
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
     "@neo/common": "workspace:*",
+    "connect-redis": "^9.0.0",
+    "express-session": "^1.18.2",
     "http-proxy-middleware": "^3.0.5",
     "prom-client": "^15.1.3",
+    "redis": "^5.8.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@types/express-session": "^1.18.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8"
   }
