--- a/docker/docker-compose.redis.yml
+++ b/docker/docker-compose.redis.yml
@@ -1,19 +1,18 @@
-version: '3.9'
-
 services:
   redis:
-    image: redis:7.4.0-alpine
+    image: redis:8-alpine
     container_name: redis
-    restart: always
     ports:
       - '6379:6379'
     volumes:
       - redis-data:/data
-    # logging:
-    #   driver: json-file
-    #   options:
-    #     max-size: "10m"
-
+    command: >
+        redis-server 
+        --appendonly yes
+        --requirepass ${REDIS_PASSWORD}
+        --maxmemory 10mb
+    networks:
+        - shared
 volumes:
   redis-data:
 
