--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "tsc --build",
     "start": "node dist/index.js",
     "nodemon": "sh scripts/dev.sh",
     "typecheck": "tsc --noEmit"
@@ -21,13 +21,9 @@
     "express-session": "^1.18.2",
     "http-proxy-middleware": "^3.0.5",
     "prom-client": "^15.1.3",
-    "redis": "^5.8.0",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "redis": "^5.8.0"
   },
   "devDependencies": {
-    "@types/express-session": "^1.18.2",
-    "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.8"
+    "@types/express-session": "^1.18.2"
   }
 }
