--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "tsc --build",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
     "nodemon": "nodemon"
