--- a/services/auth-service/tsconfig.json
+++ b/services/auth-service/tsconfig.json
@@ -3,11 +3,18 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
+    "tsBuildInfoFile": "./buildcache/auth-service",
+    "noEmit": true,
+    "allowImportingTsExtensions": true,
+    "composite": false,
+    "incremental": false,
     "baseUrl": "./src",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./*"],
+      "@/controllers/*": ["./controllers/*"],
+      "@/routes/*": ["./routes/*"]
     }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "logs", "buildcache"]
 }
