--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -6,10 +6,9 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --build",
-    "start": "node dist/index.js",
-    "nodemon": "sh scripts/dev.sh",
-    "typecheck": "tsc --noEmit"
+    "build:prod": "tsc --project tsconfig.prod.json && tsc-alias -p tsconfig.prod.json",
+    "start:prod": "node dist/index.js",
+    "start:dev": "sh scripts/dev.sh"
   },
   "keywords": [],
   "author": "",
