--- a/services/auth-service/tsconfig.json
+++ b/services/auth-service/tsconfig.json
@@ -9,7 +9,10 @@
     "composite": false,
     "incremental": false,
     "baseUrl": "./src",
+    "paths": {
+      "@/controllers/*": ["./controllers/*"],
+      "@/routes/*": ["./routes/*"],
+    }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "logs", "buildcache"]
 }
