--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -17,12 +17,24 @@
   "dependencies": {
     "@neo/common": "workspace:*",
     "connect-redis": "^9.0.0",
+    "dotenv": "^17.2.1",
+    "envalid": "^8.1.0",
+    "express": "^5.1.0",
     "express-session": "^1.18.2",
     "http-proxy-middleware": "^3.0.5",
     "prom-client": "^15.1.3",
-    "redis": "^5.8.0"
+    "redis": "^5.8.0",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
-    "@types/express-session": "^1.18.2"
+    "@eslint/eslintrc": "^3.3.1",
+    "@types/express": "^5.0.3",
+    "@types/express-session": "^1.18.2",
+    "@types/node": "24.2.1",
+    "eslint": "^9.33.0",
+    "nodemon": "^3.1.10",
+    "tsc-alias": "^1.8.16",
+    "tsx": "^4.20.3",
+    "typescript": "5.9.2"
   }
 }
