--- a/package.json
+++ b/package.json
@@ -17,23 +17,5 @@
   "keywords": [],
   "author": "ZeroDayZ7",
   "license": "ISC",
-  "packageManager": "pnpm@10.14.0",
-  "dependencies": {
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "dotenv": "^17.2.1",
-    "envalid": "^8.1.0",
-    "express": "^5.1.0",
-    "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0",
-    "zod": "^4.0.17"
-  },
-  "devDependencies": {
-    "@types/express": "^5.0.3",
-    "@types/node": "24.2.1",
-    "nodemon": "^3.1.10",
-    "tsc-alias": "^1.8.16",
-    "tsx": "^4.20.3",
-    "typescript": "5.9.2"
-  }
+  "packageManager": "pnpm@10.14.0"
 }
