--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -8,7 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:prod": "tsc --project tsconfig.prod.json && tsc-alias -p tsconfig.prod.json",
     "start:prod": "node dist/index.js",
-    "start:dev": "sh scripts/dev.sh"
+    "start:dev": "sh scripts/dev.sh",
+    "lint:dev": "eslint ./src --ext .ts",
+    "lint:debug": "eslint ./src --ext .ts --debug"
   },
   "keywords": [],
   "author": "",
@@ -28,13 +30,19 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.33.0",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
     "@types/node": "24.2.1",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
     "eslint": "^9.33.0",
+    "globals": "^16.3.0",
+    "jiti": "^2.5.1",
     "nodemon": "^3.1.10",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.20.3",
-    "typescript": "5.9.2"
+    "typescript": "5.9.2",
+    "typescript-eslint": "^8.39.0"
   }
 }
