--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,10 +34,12 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "7.62.0",
     "sonner": "2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@types/node": "24.2.1",
     "@types/react": "19.1.9",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
@@ -45,6 +47,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.11",
-    "tw-animate-css": "^1.3.6"
+    "tw-animate-css": "^1.3.6",
+    "typescript": "5.9.2"
   }
 }
